<?xml version="1.0" encoding="utf-8"?>
<!--내일배움카드제 xml-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mostOuter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/outer">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/def">

            <!--내일배움카드제란?-->
            <TextView
                android:id="@+id/defName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/def_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#a839a8"/>

            <TextView
                android:id="@+id/defContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/def_content"
                android:background="#f9eff9"/>

        </LinearLayout>

        <!--누가 신청할 수 있나요?-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/who">

            <TextView
                android:id="@+id/whoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/who_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#a839a8"/>

            <TableLayout
                android:id="@+id/whoTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:stretchColumns="1"
                android:shrinkColumns="1">

                <TableRow
                    android:id="@+id/who_tr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f9eff9"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/who_tr1_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr1_td1"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/who_tr1_td2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr1_td2"
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/who_tr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f9eff9"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/who_tr2_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr2_td1"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/who_tr2_td2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr2_td2"/>
                </TableRow>

                <TableRow
                    android:id="@+id/who_tr3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f9eff9"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/who_tr3_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr3_td1"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/who_tr3_td2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr3_td2"/>
                </TableRow>

                <TableRow
                    android:id="@+id/who_tr4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/who_tr4_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_tr4_td1"/>
                </TableRow>

            </TableLayout>


        </LinearLayout>

        <!--어떤 혜택이 있나요?-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/what">

            <TextView
                android:id="@+id/whatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/what_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#a839a8"/>

            <TableLayout
                android:id="@+id/whatTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:stretchColumns="1"
                android:shrinkColumns="1">

                <TableRow
                    android:id="@+id/what_tr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f9eff9"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:id="@+id/what_tr1_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_tr1_td1"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/what_tr1_td2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_tr1_td2"/>
                </TableRow>

                <TableRow
                    android:id="@+id/what_tr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f9eff9">
                    <TextView
                        android:id="@+id/what_tr2_td1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_tr2_td1"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/what_tr2_td2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_tr2_td2"/>
                </TableRow>

            </TableLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:layout_margin="5dp"
                android:background="#a839a8">

                <TextView
                    android:id="@+id/what2_th1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_th1"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_gravity="fill"
                    android:layout_columnSpan="2"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"/>
                <TextView
                    android:id="@+id/what2_th2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_th2"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/what2_tr1_td1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr1_td1"
                    android:layout_gravity="fill"
                    android:layout_columnSpan="2"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"/>

                <TextView
                    android:id="@+id/what2_tr1_td2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#ffffff"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:text="@string/what2_tr1_td2" />

                <TextView
                    android:id="@+id/what2_tr2_td1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr2_td1"
                    android:layout_rowSpan="2"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="2dp"/>
                <TextView
                    android:id="@+id/what2_tr2_td2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr2_td2"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_margin="1dp"/>

                <TextView
                    android:id="@+id/what2_tr2_td3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr2_td3"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_margin="1dp"
                    android:layout_marginRight="0dp"/>

                <TextView
                    android:id="@+id/what2_tr3_td2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr3_td2"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/what2_tr3_td3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what2_tr3_td3"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:background="#ffffff"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="2dp"/>

            </GridLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
